tests/suite/errors/e19_condition_not_bool.rs
// err: if condition must be `bool`, found

fn main() {
    if 42 {
        println!("yes");
    }
}
